apps/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit-cloudflare
  namespace: media
spec:
  ingressClassName: cloudflare
  rules:
    - host: qbit.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 10095
            path: /
            pathType: Prefix
